--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/MeelahMe/Resume-/blob/536e4b0e8ace5f33e646351d9fed6fb965131fce/2024ItRes-3.pdf-11.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url= https://github.com/MeelahMe/Resume- &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
